src/objects/jiffle__Meeting_Relations__c.object
<CustomObject>
    <description>Object used to store Jifflenow meetings relationship with account, opportunity.</description>
    <fields>
        <fullName>jiffle__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Meetings</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Meeting Relations</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Event__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Event__r.Name</formula>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Lead_Contact_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_ID__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Meeting_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Location__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Meeting_Location__c</formula>
        <label>Meeting Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>jiffle__Meeting__c</referenceTo>
        <relationshipLabel>Meeting Relations</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Meetings</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Request_Status__c</fullName>
        <formula>text(jiffle__Meeting__r.jiffle__Request_Status__c)</formula>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Unique_Name__c</fullName>
        <description>Used to store any other unique key</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meeting Relations</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>